--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@gorhom/bottom-sheet": "^4.5.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.9",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
     "expo-auth-session": "~5.0.2",
@@ -41,7 +42,6 @@
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
