--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "devBuild:ios": "eas build --profile development-simulator --platform ios",
     "devBuild:android": "eas build --profile development-simulator --platform android",
-    "start": "npx expo start --dev-client",
+    "start": "npx expo start --dev-client --reset-cache",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "prebuild": "npx expo prebuild"
   },
   "jest": {
     "preset": "jest-expo"
@@ -17,6 +18,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@gorhom/bottom-sheet": "^4.5.1",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.9",
     "axios": "^1.6.2",
@@ -28,6 +30,7 @@
     "expo-dev-client": "~2.4.12",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
+    "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-media-library": "~15.4.1",
     "expo-router": "^2.0.0",
@@ -35,13 +38,18 @@
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^13.0.1",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "^3.27.0",
+    "react-native-svg": "^14.0.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
