--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^13.0.1",
-    "react-native-qrcode-svg": "^6.2.0",
+    "react-native-pager-view": "^6.2.0",
+    "react-native-qrcode-styled": "^0.2.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.27.0",
