finished id, create my dog, create dog passport view

--- a/eas.json
+++ b/eas.json
@@ -22,7 +22,10 @@
       }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk"
+      }
     },
     "production": {}
   },
