--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-animated-pagination-dot": "^0.4.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^13.0.1",
-    "react-native-pager-view": "^6.2.0",
+    "react-native-pager-view": "^6.2.3",
     "react-native-qrcode-styled": "^0.2.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.6.3",
